--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-font-awesome": "^3.1.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "mkdirp": "^1.0.3",
     "ng-simple-slideshow": "^1.2.9",
     "ngx-spinner": "^9.0.1",
     "popper.js": "^1.16.1",
