--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
- 
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.7",
@@ -21,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "angular-font-awesome": "^3.1.2",
+    "emailjs": "^2.2.0",
+    "emailjs-com": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "mkdirp": "^1.0.3",
@@ -28,6 +29,7 @@
     "ngx-spinner": "^9.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.10.12",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -38,7 +40,7 @@
     "@angular/language-service": "~8.2.7",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "bootstrap": "^3.4.1",
     "codelyzer": "^5.0.0",
     "jasmine": "^3.5.0",
@@ -54,6 +56,4 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
-  
 }
-
